Committing - Added pagination